[gd_scene format=3 uid="uid://bcyqymumbvdpb"]

[ext_resource type="PackedScene" uid="uid://bui1542cx7gb" path="res://level_icon.tscn" id="1_il3u1"]
[ext_resource type="Script" uid="uid://clfxjtd7hcu1y" path="res://level_select.gd" id="1_vomi7"]
[ext_resource type="Texture2D" uid="uid://db3x2llp00wyh" path="res://world_tileset.png" id="2_apu6u"]
[ext_resource type="PackedScene" uid="uid://3qw1idbs4ow4" path="res://player_icon.tscn" id="2_wevku"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bv7n5"]
texture = ExtResource("2_apu6u")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0

[sub_resource type="TileSet" id="TileSet_lmhjs"]
sources/0 = SubResource("TileSetAtlasSource_bv7n5")

[node name="LevelSelect" type="Control" unique_id=1834330937]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vomi7")

[node name="TileMapLayer" type="TileMapLayer" parent="." unique_id=240348492]
scale = Vector2(4, 4)
tile_set = SubResource("TileSet_lmhjs")

[node name="LevelIcon" parent="." unique_id=8457930 node_paths=PackedStringArray("next_level_up", "next_level_down", "next_level_right") instance=ExtResource("1_il3u1")]
layout_mode = 0
offset_left = 249.0
offset_top = 299.0
offset_right = 313.0
offset_bottom = 364.0
next_level_up = NodePath("../A")
next_level_down = NodePath("../C")
next_level_right = NodePath("../B")

[node name="B" parent="." unique_id=620296854 node_paths=PackedStringArray("next_level_up", "next_level_down", "next_level_left") instance=ExtResource("1_il3u1")]
layout_mode = 0
offset_left = 482.0
offset_top = 299.0
offset_right = 546.0
offset_bottom = 364.0
level_name = "B"
next_scene_path = "uid://b0wrqlo0r7ohk"
next_level_up = NodePath("../A")
next_level_down = NodePath("../C")
next_level_left = NodePath("../LevelIcon")

[node name="C" parent="." unique_id=1867556507 node_paths=PackedStringArray("next_level_up", "next_level_left") instance=ExtResource("1_il3u1")]
layout_mode = 0
offset_left = 482.0
offset_top = 473.0
offset_right = 546.0
offset_bottom = 538.0
level_name = "C"
next_scene_path = "uid://b0wrqlo0r7ohk"
next_level_up = NodePath("../B")
next_level_left = NodePath("../LevelIcon")

[node name="A" parent="." unique_id=1678367899 node_paths=PackedStringArray("next_level_down", "next_level_left") instance=ExtResource("1_il3u1")]
layout_mode = 0
offset_left = 482.0
offset_top = 96.0
offset_right = 546.0
offset_bottom = 161.0
level_name = "A"
next_scene_path = "uid://b0wrqlo0r7ohk"
next_level_down = NodePath("../B")
next_level_left = NodePath("../LevelIcon")

[node name="playerIcon" parent="." unique_id=735402516 instance=ExtResource("2_wevku")]
layout_mode = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 64.0
offset_bottom = 64.0
